Fix table of contents on firefox

--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -233,6 +233,7 @@ hr {
 
 .column-no-wrap {
   break-inside: avoid;
+  page-break-inside: avoid;
 }
 
 .hidden {
